<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout_peso"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/fieldPeso_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weight_textView"
            style="@style/CustomFieldTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/peso_editText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fieldAltura_textView"
            app:layout_constraintWidth_percent="0.3"/>

        <EditText
            android:id="@+id/peso_editText"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="@dimen/edittext_height"
            android:padding="@dimen/padding"
            android:inputType="numberDecimal"
            android:autofillHints="peso"
            android:hint="@string/weightHint_textView"
            android:textColorHint="@color/textHint"
            style="@style/CustomEditTextPesoYAltura"
            app:layout_constraintStart_toEndOf="@+id/fieldPeso_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/altura_editText"
            app:layout_constraintWidth_percent="0.7"/>

        <TextView
            android:id="@+id/fieldAltura_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/height_textView"
            style="@style/CustomFieldTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/altura_editText"
            app:layout_constraintTop_toBottomOf="@+id/fieldPeso_textView"
            app:layout_constraintBottom_toTopOf="@id/radioGroup_ManWoman"
            app:layout_constraintWidth_percent="0.3"/>

        <EditText
            android:id="@+id/altura_editText"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="@dimen/edittext_height"
            android:padding="@dimen/padding"
            android:inputType="numberDecimal"
            android:autofillHints="peso"
            android:hint="@string/heightHint_textView"
            android:textColorHint="@color/textHint"
            style="@style/CustomEditTextPesoYAltura"
            app:layout_constraintStart_toEndOf="@+id/fieldAltura_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/peso_editText"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup_ManWoman"
            app:layout_constraintWidth_percent="0.7"/>

        <RadioGroup
            android:id="@+id/radioGroup_ManWoman"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:flow_verticalAlign="center"
            app:layout_constraintTop_toBottomOf="@+id/altura_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_Calcular"
            app:layout_constraintHeight_percent="0.1">

            <RadioButton
                android:id="@+id/radioButton_hombre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/man_radioButton"
                android:checked="true"
                style="@style/CustomRadioButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/radioButton_mujer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <RadioButton
                android:id="@+id/radioButton_mujer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/woman_radioButton"
                style="@style/CustomRadioButton"
                app:layout_constraintStart_toEndOf="@id/radioButton_hombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_Calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button"
            style="@style/CustomButtonCalculate"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_ManWoman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout_resultTextView"
            tools:ignore="VisualLintButtonSize" />

        <LinearLayout
            android:id="@+id/layout_resultTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/backgroundElements"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/button_Calcular"
            app:layout_constraintBottom_toTopOf="@id/resultStateIMC_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.6">

            <TextView
                android:id="@+id/result_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/imc_result_textView"
                style="@style/CustomResultTextView"
                android:visibility="invisible"/>

        </LinearLayout>

        <TextView
            android:id="@+id/resultStateIMC_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/CustomTextViewStateIMC"
            app:layout_constraintTop_toBottomOf="@id/layout_resultTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>